# lens

./: .env.example  .gitignore  CLAUDE.md  README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/lens/app/: AskViewModel.kt  LensApplication.kt  MainActivity.kt  MemoriesViewModel.kt
android/app/src/main/java/com/lens/app/audio/: VoiceRecorder.kt
android/app/src/main/java/com/lens/app/capture/: CaptureSource.kt  GlassesCaptureSource.kt  PhoneCaptureSource.kt
android/app/src/main/java/com/lens/app/data/: SettingsStore.kt
android/app/src/main/java/com/lens/app/glasses/: GlassesManager.kt  MockGlassesController.kt
android/app/src/main/java/com/lens/app/net/: LensClient.kt  MemoryApi.kt  StreamingDataSource.kt
android/app/src/main/java/com/lens/app/ui/: AskScreen.kt  MemoriesScreen.kt  SettingsScreen.kt
android/app/src/test/java/com/lens/app/: AskContractTest.kt
android/gradle/: libs.versions.toml
backend/: docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/: ask.py  deps.py  health.py  ingest.py  memory.py
backend/app/core/: config.py  images.py  timing.py
backend/app/memory/: ingest.py  store.py
backend/app/models/: schemas.py
backend/app/services/: embeddings.py  storage.py  stt.py  tts.py  vlm.py
backend/tests/: conftest.py  test_ask.py  test_health.py  test_memory.py  test_units.py
docs/: ask-contract.md  hardware-todo.md  latency-log.md  phase3-glasses-integration.md
