[project]
name = "lens-backend"
version = "0.1.0"
description = "Lens — real-time vision agent backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "anthropic>=0.40",
    "openai>=1.40",
    "faster-whisper>=1.0",
    "pillow>=10.3",
    "kokoro>=0.9.4",
    "lameenc>=1.8.4",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
